@@ -41,7 +41,7 @@
 
 #include <assert.h>
 
-static char software_version[] = "$Id: query.c,v 1.117 2003-11-28 16:53:14 freddy77 Exp $";
+static char software_version[] = "$Id: query.c,v 1.118 2003-12-03 10:42:09 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static void tds_put_params(TDSSOCKET * tds, TDSPARAMINFO * info, int flags);
@@ -675,7 +675,7 @@ tds7_put_query_params(TDSSOCKET * tds, const char *query, int query_len, const c
 
 /**
  * tds_submit_prepare() creates a temporary stored procedure in the server.
- * Currently works with TDS 5.0 and TDS7+
+ * Under TDS 4.2 dynamic statements are emulated building sql command
  * \param tds     state information for the socket and the TDS protocol
  * \param query   language query with given placeholders (?)
  * \param id      string to identify the dynamic query. Pass NULL for automatic generation.
@@ -695,11 +695,6 @@ tds_submit_prepare(TDSSOCKET * tds, const char *query, const char *id, TDSDYNAMI
 	if (!query)
 		return TDS_FAIL;
 
-	if (!IS_TDS50(tds) && !IS_TDS7_PLUS(tds)) {
-		tdsdump_log(TDS_DBG_ERROR, "Dynamic placeholders only supported under TDS 5.0 and TDS 7.0+\n");
-		return TDS_FAIL;
-	}
-
 	/* allocate a structure for this thing */
 	if (!id) {
 		char *tmp_id = NULL;
@@ -715,7 +710,7 @@ tds_submit_prepare(TDSSOCKET * tds, const char *query, const char *id, TDSDYNAMI
 		return TDS_FAIL;
 	
 	/* TDS5 sometimes cannot accept prepare so we need to store query */
-	if (IS_TDS50(tds)) {
+	if (!IS_TDS7_PLUS(tds)) {
 		dyn->query = strdup(query);
 		if (!dyn->query) {
 			tds_free_dynamic(tds, dyn);
@@ -727,6 +722,11 @@ tds_submit_prepare(TDSSOCKET * tds, const char *query, const char *id, TDSDYNAMI
 
 	if (dyn_out)
 		*dyn_out = dyn;
+
+	if (!IS_TDS50(tds) && !IS_TDS7_PLUS(tds)) {
+		dyn->emulated = 1;
+		return TDS_SUCCEED;
+	}
 
 	if (tds_to_quering(tds) == TDS_FAIL)
 		return TDS_FAIL;
@@ -822,6 +822,9 @@ tds_submit_execdirect(TDSSOCKET * tds, const char *query, TDSPARAMINFO * params)
 {
 	int query_len;
 	TDSCOLINFO *param;
+	char *tmp_id = NULL;
+	TDSDYNAMIC *dyn;
+	int id_len;
 
 	if (!query)
 		return TDS_FAIL;
@@ -900,49 +903,46 @@ tds_submit_execdirect(TDSSOCKET * tds, const char *query, TDSPARAMINFO * params)
 	}
 
 	/* allocate a structure for this thing */
-	if (IS_TDS50(tds)) {
-		char *tmp_id = NULL;
-		TDSDYNAMIC *dyn;
-		int id_len;
+	if (tds_get_dynid(tds, &tmp_id) == TDS_FAIL)
+		return TDS_FAIL;
+	dyn = tds_alloc_dynamic(tds, tmp_id);
+	free(tmp_id);
 
-		if (tds_get_dynid(tds, &tmp_id) == TDS_FAIL)
-			return TDS_FAIL;
-		dyn = tds_alloc_dynamic(tds, tmp_id);
-		free(tmp_id);
+	if (!dyn)
+		return TDS_FAIL;
+	tds->cur_dyn = dyn;
 
-		if (!dyn)
-			return TDS_FAIL;
-		tds->cur_dyn = dyn;
+	if (tds_to_quering(tds) == TDS_FAIL)
+		return TDS_FAIL;
+	tds->internal_sp_called = 0;
 
-		if (tds_to_quering(tds) == TDS_FAIL)
-			return TDS_FAIL;
-		tds->internal_sp_called = 0;
-
-		tds->out_flag = 0x0F;
-
-		id_len = strlen(dyn->id);
-		tds_put_byte(tds, TDS5_DYNAMIC_TOKEN);
-		tds_put_smallint(tds, query_len + id_len * 2 + 21);
-		tds_put_byte(tds, 0x08);
-		tds_put_byte(tds, params ? 0x01 : 0);
-		tds_put_byte(tds, id_len);
-		tds_put_n(tds, dyn->id, id_len);
-		/* TODO ICONV convert string, do not put with tds_put_n */
-		/* TODO how to pass parameters type? like store procedures ? */
-		tds_put_smallint(tds, query_len + id_len + 16);
-		tds_put_n(tds, "create proc ", 12);
-		tds_put_n(tds, dyn->id, id_len);
-		tds_put_n(tds, " as ", 4);
-		tds_put_n(tds, query, query_len);
-
-		if (params)
-			tds_put_params(tds, params, 0);
-
-		return tds_flush_packet(tds);
+	/* TDS 4.2, emulate prepared statements */
+	if (!IS_TDS50(tds)) {
+		dyn->emulated = 1;
+		return tds_submit_emulated_execute(tds, dyn);
 	}
 
-	tdsdump_log(TDS_DBG_ERROR, "Dynamic placeholders only supported under TDS 5.0 and TDS 7.0+\n");
-	return TDS_FAIL;
+	tds->out_flag = 0x0F;
+
+	id_len = strlen(dyn->id);
+	tds_put_byte(tds, TDS5_DYNAMIC_TOKEN);
+	tds_put_smallint(tds, query_len + id_len * 2 + 21);
+	tds_put_byte(tds, 0x08);
+	tds_put_byte(tds, params ? 0x01 : 0);
+	tds_put_byte(tds, id_len);
+	tds_put_n(tds, dyn->id, id_len);
+	/* TODO ICONV convert string, do not put with tds_put_n */
+	/* TODO how to pass parameters type? like store procedures ? */
+	tds_put_smallint(tds, query_len + id_len + 16);
+	tds_put_n(tds, "create proc ", 12);
+	tds_put_n(tds, dyn->id, id_len);
+	tds_put_n(tds, " as ", 4);
+	tds_put_n(tds, query, query_len);
+
+	if (params)
+		tds_put_params(tds, params, 0);
+
+	return tds_flush_packet(tds);
 }
 
 
@@ -2042,7 +2042,7 @@ tds_put_param_as_string(TDSSOCKET * tds, TDSPARAMINFO * params, int n)
 	case SYBDATETIME:
 	case SYBDATETIME4:
 	default:
-		res = tds_convert(tds->tds_ctx, curcol->column_type, src, src_len, SYBCHAR, &cr);
+		res = tds_convert(tds->tds_ctx, tds_get_conversion_type(curcol->column_type, curcol->column_size), src, src_len, SYBCHAR, &cr);
 		if (res < 0)
 			return TDS_FAIL;
 		tds_put_n(tds, "\'", 1);
