@@ -1,3 +1,6 @@
+Wed Dec 03 11:41:45 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/query.c: support for emulated prepare under TDS 4.2
+
 Wed Dec 03 11:01:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/config.c: remove libgen dependency
 
